--- a/Pluto.Wpf.Controls/Tab/CloseableTab.xaml
+++ b/Pluto.Wpf.Controls/Tab/CloseableTab.xaml
@@ -35,7 +35,9 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Button Margin="1" Width="{Binding TabWidth}" Command="{Binding ClickTab,ElementName=closeable_table}" 
-                                CommandParameter="{Binding Path=.}">
+                                CommandParameter="{Binding Path=.}"
+                                    Background="{Binding Background}" 
+                                    HorizontalContentAlignment="Stretch">
                                 <Grid Margin="1">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition/>
